@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-11-29T00:46:50Z",
+  "timestamp" : "2023-11-29T08:13:11Z",
   "count_outdated" : 5769,
   "uniques_outdated" : 1960,
-  "count" : 5855,
-  "uniques" : 2026,
+  "count" : 5858,
+  "uniques" : 2028,
   "clones" : [
     {
       "timestamp": "2023-11-18T00:00:00Z",
@@ -100,6 +100,15 @@
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-11-29T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
