@@ -1,6 +1,6 @@
 {
-  "count": 86,
-  "uniques": 52,
+  "count": 89,
+  "uniques": 53,
   "clones": [
     {
       "timestamp": "2023-11-18T00:00:00Z",
@@ -55,6 +55,11 @@
     {
       "timestamp": "2023-11-28T00:00:00Z",
       "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2023-11-29T00:00:00Z",
+      "count": 3,
       "uniques": 2
     }
   ]
