@@ -1,3 +1,12 @@
+2023-11-29T08:13:11Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7029730019 # 2121
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-29
+* notice: last 14d: unq all: 53 89
+* notice: prev accum: outdated-unq outdated-all / unq all: 1960 5769 / 2026 5855
+* notice: next accum: outdated-unq outdated-all / unq all: 1960 5769 / 2028 5858
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2023-11-29]
+
 2023-11-29T00:46:50Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7026456228 # 2120
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-29
